# opendroneid-rs

./: .gitmodules  .pre-commit-config.yaml  .release-plz.toml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-plz.yaml
opendroneid/: CHANGELOG.md  Cargo.toml  README.md
opendroneid-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
opendroneid-sys/compat/: byteswap.h
opendroneid-sys/src/: lib.rs
opendroneid/src/: constants.rs  error.rs  lib.rs  macros.rs  utils.rs
