[package]
name = "opendroneid"
version = "0.1.0"
edition = "2024"
description = "Safe Rust wrapper for Open Drone ID encoding/decoding APIs"
license = "Apache-2.0"
repository = "https://github.com/xneural-org/opendroneid-rs"
keywords = ["drone", "uav", "remote id", "opendroneid", "odid"]

[dependencies]
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, optional = true, features = [
    "now",
    "std",
] }
num-traits = { version = "0.2" }
num-derive = { version = "0.4" }
opendroneid-sys = { path = "../opendroneid-sys", default-features = false }
thiserror = { version = "1" }

[features]
chrono = ["dep:chrono"]
